--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -216,15 +216,17 @@
                 android:layout_marginTop="24dp"
                 android:text="@string/payment"/>
 
-            <androidx.cardview.widget.CardView
+            <com.google.android.material.card.MaterialCardView
                 android:id="@+id/btn_cash"
                 android:layout_width="100dp"
                 android:layout_height="80dp"
                 app:layout_constraintTop_toBottomOf="@id/tv_payment_label"
                 app:layout_constraintStart_toStartOf="parent"
                 app:cardCornerRadius="9dp"
-                android:backgroundTint="@color/text_color_2"
-                android:layout_marginTop="14dp">
+                android:layout_marginTop="14dp"
+                android:backgroundTint="#4B413A"
+                app:strokeColor="@color/grey_primary_variant"
+                app:strokeWidth="3dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -236,7 +238,7 @@
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:src="@drawable/ic_cash"
-                        app:tint="@color/black" />
+                        app:tint="@color/text_color" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -244,14 +246,13 @@
                         style="@style/RegularText2"
                         android:textStyle="bold"
                         android:text="@string/cash"
-                        android:textColor="#000000"
                         android:layout_marginTop="11dp"/>
 
                 </LinearLayout>
 
-            </androidx.cardview.widget.CardView>
+            </com.google.android.material.card.MaterialCardView>
 
-            <androidx.cardview.widget.CardView
+            <com.google.android.material.card.MaterialCardView
                 android:id="@+id/btn_credit_card"
                 android:layout_width="100dp"
                 android:layout_height="80dp"
@@ -260,6 +261,7 @@
                 app:cardCornerRadius="9dp"
                 android:layout_marginTop="14dp"
                 android:layout_marginStart="24dp"
+                app:strokeColor="@color/grey_primary_variant"
                 android:backgroundTint="#4B413A">
 
                 <LinearLayout
@@ -284,9 +286,10 @@
 
                 </LinearLayout>
 
-            </androidx.cardview.widget.CardView>
+            </com.google.android.material.card.MaterialCardView>
 
-            <androidx.cardview.widget.CardView
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/btn_momo"
                 android:layout_width="100dp"
                 android:layout_height="80dp"
                 app:layout_constraintStart_toEndOf="@id/btn_credit_card"
@@ -294,6 +297,7 @@
                 app:cardCornerRadius="9dp"
                 android:layout_marginTop="14dp"
                 android:layout_marginStart="24dp"
+                app:strokeColor="@color/grey_primary_variant"
                 android:backgroundTint="#AD006C">
 
                 <ImageView
@@ -301,7 +305,7 @@
                     android:layout_height="match_parent"
                     android:src="@drawable/momo" />
 
-            </androidx.cardview.widget.CardView>
+            </com.google.android.material.card.MaterialCardView>
 
             <TextView
                 android:id="@+id/tv_jolie_coin"
