--- a/app/src/main/res/layout/item_cart_suggestion.xml
+++ b/app/src/main/res/layout/item_cart_suggestion.xml
@@ -16,6 +16,7 @@
         app:cardCornerRadius="9dp">
 
         <ImageView
+            android:id="@+id/img_product"
             android:layout_width="102dp"
             android:layout_height="102dp"
             android:scaleType="centerCrop"
@@ -25,6 +26,7 @@
 
 
     <TextView
+        android:id="@+id/tv_name_product"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/RegularText"
@@ -33,6 +35,7 @@
         android:layout_marginBottom="3dp"/>
 
     <TextView
+        android:id="@+id/tv_type_product"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/SmallText"
@@ -40,6 +43,7 @@
         android:layout_marginBottom="3dp"/>
 
     <TextView
+        android:id="@+id/tv_price_product"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/SmallNumber"
