--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -148,6 +148,10 @@
         <item name="cornerSize">50%</item>
     </style>
 
+    <style name="rounded_corner_9dp">
+        <item name="cornerSize">9dp</item>
+    </style>
+
     <style name="TabText" parent="@android:style/TextAppearance.Widget.TabWidget">
         <item name="fontFamily">@font/raleway_regular</item>
         <item name="android:textSize">18sp</item>
