--- a/app/src/main/res/layout/dialog_voucher.xml
+++ b/app/src/main/res/layout/dialog_voucher.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="406dp"
     android:layout_height="wrap_content"
+    android:maxHeight="500dp"
     tools:context=".ui.activities.checkout.VoucherDialog"
     android:background="@drawable/rounded_shape"
     android:paddingVertical="18dp"
@@ -101,5 +102,17 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintTop_toBottomOf="@id/tv_free_ship_label"
         app:layout_constraintStart_toStartOf="parent"/>
+
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/progress_indicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="invisible"
+        app:indicatorColor="@color/text_color_2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
