--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -342,10 +342,11 @@
                         android:text="@string/use_jolie_coin"/>
 
                     <TextView
+                        android:id="@+id/tv_use_jolie_coin_detail"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         style="@style/RegularNumber2"
-                        android:text="[-200]"/>
+                        android:text="@string/use_coin"/>
 
                     <androidx.appcompat.widget.SwitchCompat
                         android:id="@+id/sw_use_jolie_coin"
@@ -464,7 +465,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
-                        android:text="-200 VND"
+                        android:text="@string/jolie_coin_detail"
                         android:textSize="14sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/tv_discount_detail" />
