--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -26,7 +26,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="90dp"
         android:fontFamily="@font/raleway_medium"
-        android:text="FORGOT YOUR PASSWORD?"
+        android:text="@string/forgot_your_password"
         android:textAlignment="center"
         android:textColor="#bc834b"
         android:textSize="24sp"
@@ -46,16 +46,15 @@
         android:textSize="20sp" />
 
 
-
     <TextView
         android:id="@+id/tvGmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/username"
-        android:textColor="#e4e4e4"
-        android:fontFamily="@font/raleway_regular"
-        android:layout_marginTop="32dp"
         android:layout_below="@id/tvIntro"
+        android:layout_marginTop="32dp"
+        android:fontFamily="@font/raleway_regular"
+        android:text="@string/email"
+        android:textColor="#e4e4e4"
         android:textSize="16sp" />
 
     <com.google.android.material.textfield.TextInputLayout
