--- a/app/src/main/res/layout/activity_products.xml
+++ b/app/src/main/res/layout/activity_products.xml
@@ -84,6 +84,8 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
                 android:layout_marginHorizontal="8dp"
+                android:clipToPadding="false"
+                android:paddingBottom="20dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="3dp"
                 android:layout_marginEnd="8dp" />
