--- a/app/src/main/res/layout/item_rv_product.xml
+++ b/app/src/main/res/layout/item_rv_product.xml
@@ -49,17 +49,18 @@
 
             <TextView
                 android:id="@+id/tv_name_product"
-                android:layout_width="101dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
                 android:ellipsize="end"
                 android:layout_marginTop="9dp"
-                android:layout_marginEnd="10dp"
-                android:fontFamily="@font/raleway_variable_font_wght"
+                android:layout_marginEnd="4dp"
+                android:fontFamily="@font/raleway_regular"
+                android:textAlignment="textStart"
                 android:text="Sweet Cappuccino Sweet Cappuccino Sweet Cappuccino"
                 android:textColor="@color/text_color"
                 android:textSize="14sp"
-                android:textStyle="bold"
+                app:layout_constraintEnd_toStartOf="@id/img_favorite"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/img_card" />
 
@@ -90,12 +91,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:fontFamily="@font/raleway_variable_font_wght"
+                android:fontFamily="@font/raleway_regular"
                 android:textColor="@color/text_color"
                 android:textSize="11sp"
                 android:maxLines="1"
                 android:ellipsize="end"
-                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_name_product" />
 
@@ -108,22 +108,11 @@
                 android:textStyle="bold"
                 android:ellipsize="marquee"
                 android:fontFamily="@font/montserrat_regular"
-                android:text="99999999999999999999"
+                android:text="@string/product_price"
                 android:textColor="@color/grey_primary_variant"
                 android:textSize="11sp"
                 android:maxLength="13"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_categories_product" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:fontFamily="@font/raleway_medium"
-                android:text=" VNĐ"
-                android:textColor="@color/grey_primary_variant"
-                android:textSize="11sp"
-                app:layout_constraintStart_toEndOf="@+id/item_price_product"
                 app:layout_constraintTop_toBottomOf="@+id/tv_categories_product" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
