--- a/app/src/main/res/layout/item_rv_notification.xml
+++ b/app/src/main/res/layout/item_rv_notification.xml
@@ -69,7 +69,7 @@
                 android:layout_marginTop="20dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/image_logo"
-                android:visibility="gone"
+                android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/tv_notification_title"
